# AnchorLoop

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.codex/skills/anchorloop/: .anchorloop-skill.json  SKILL.md
.codex/skills/anchorloop/references/: workflow.md
.github/workflows/: ci.yml  release.yml
docs/: ANCHOR_DECISION_MAP.md  MIGRATION_0.2.md  PORTABLE_SKILL.md  PROJECT_PLAN.md
docs/i18n/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.pt-BR.md  README.ru.md  README.zh-CN.md
npm/scripts/: finalize-release-docs.js  registry-smoke.js  version.js
npm/test/: anchorloop.test.js  release-docs.test.js  version.test.js
src/anchorloop/: __init__.py  cli.py  command.py  project.py  project_lock.py  quality.py  safe_fs.py  skill_install.py  transaction.py  version.py
src/anchorloop/skills/anchorloop/: SKILL.md
src/anchorloop/skills/anchorloop/references/: workflow.md
tests/: __init__.py  git_fixture.py  test_actual_diff_risk.py  test_cli.py  test_core_validation.py  test_filesystem_safety.py  test_human_ownership.py  test_integrity_regressions.py  test_project_lock.py  test_project_transactions.py  test_release_version.py  test_skill_install_matrix.py  test_skill_install_recovery.py  test_transaction.py
