[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorloop"
version = "0.1.0"
description = "Local, agent-neutral workflow control for AI-assisted engineering."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AnchorLoop contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
anchor = "anchorloop.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
