[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorloop"
dynamic = ["version"]
description = "Local, agent-neutral workflow control for AI-assisted engineering."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AnchorLoop contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
anchor = "anchorloop.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "anchorloop.version.VERSION" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anchorloop = [
  "skills/anchorloop/*.md",
  "skills/anchorloop/references/*.md",
]
